<?xml version="1.0" encoding="utf-8"?>
<!-- DO NOT MODIFY: release must allow cleartext HTTP for self-hosted Gateway URLs. -->
<network-security-config xmlns:tools="http://schemas.android.com/tools">
    <base-config
        cleartextTrafficPermitted="true"
        tools:ignore="InsecureBaseConfiguration" />
</network-security-config>

